# recommendation-system

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  analyze.py  analyze_segments.py  benchmark.py  docker-compose.yml  pyproject.toml  requirements.txt  serve.py  train.py  visualize.py
.github/workflows/: ci.yml
configs/: config.yaml
src/: pipeline.py
src/candidates/: als_generator.py  content_generator.py  fusion.py  popularity_generator.py  recency_generator.py  two_tower_generator.py
src/data/: loader.py
src/evaluation/: baselines.py  metrics.py
src/features/: engineer.py
src/models/: cold_start.py  diversity.py  two_tower.py  user_segmentation.py
src/ranking/: ranker.py
src/serving/: api.py
src/utils/: config.py
tests/: conftest.py  test_api.py  test_candidates.py  test_cold_start.py  test_data_loader.py  test_evaluation.py  test_features.py  test_ranking.py
